css/style.scss
/* ... */
.contactPopup .leaflet-popup-content,
.leaflet-marker-contact-tooltip {
    display: flex;
}
.contactPopup p {
    margin: 0;
}
.contactPopup a {
    color: var(--color-primary-element);
}
.tooltip-contact-avatar {
    min-width: 70px;
    min-height: 70px;
    max-width: 70px;
    max-height: 70px;
    border-radius: 50%;
}
.tooltip-contact-content {
    padding-left: 12px;
}
.tooltip-contact-name,
.tooltip-contact-address-type,
.tooltip-contact-address {
    margin: 0;
    max-width: 160px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.tooltip-contact-name {
    font-weight: bold;
}
.tooltip-contact-address-type {
    color: var(--color-text-maxcontrast);
}
.contactPopup .deleteContactAddress {
    display: inline-block;
    cursor: pointer;
}

.no-routing-engine-warning {
    width: 100%;
    text-align: center;
}
/* Overriden routing/geocoder style */
.leaflet-routing-container {
    width: 350px;
    max-width: calc(100vw - 45px);
}
.leaflet-routing-geocoder-result tr {
    line-height: 35px;
}
/* hide button if placeholder is shown i.e. if field is empty */
.leaflet-routing-geocoder > input:placeholder-shown + span {
    display: none;
}
.leaflet-routing-geocoders {
    width: 310px;
    border-bottom: 0;
    padding-right: 0;
}
.leaflet-routing-alternatives-container:not(:empty) {
    border-top: 1px solid var(--color-border);
}
.leaflet-routing-reverse-waypoints.icon-loading-small::after {
    content: '';
}
.leaflet-routing-reverse-waypoints,
.leaflet-routing-add-waypoint {
    width: 25px !important;
    height: 25px !important;
    min-width: 25px !important;
    min-height: 25px !important;
    padding: 0px !important;
    border: 1px solid var(--color-border) !important;
    line-height: 0px !important;
}
.leaflet-routing-remove-waypoint::after {
    right: 6px !important;
    width: 18px !important;
    height: 5px !important;
    background-color: var(--color-main-background) !important;
}
.leaflet-routing-remove-waypoint:hover:after {
    color: var(--color-main-text) !important;
}
.leaflet-routing-alt table {
    white-space: normal;
    width: 100%;
}
.leaflet-routing-alt td:nth-child(2),
.leaflet-routing-alt td:nth-child(3) {
    display: block;
}
.leaflet-routing-alt td:nth-child(3) {
    color: var(--color-text-light);
}
.leaflet-routing-alt tr:nth-child(odd) {
    background-color: var(--color-background-dark);
}
.leaflet-routing-alt tr:hover {
    background-color: var(--color-background-darker);
}
.leaflet-routing-instruction-distance {
    width: 1px;
}
.app-navigation-entry-menu {
    z-index: 10001;
}
#devicecolorinput,
#trackcolorinput {
    opacity: 0;
    width: 0px;
    height: 0px;
    min-height: 0px;
    padding: 0px;
    margin: 0px;
    border: 0px;
}
.popuptable{
    font-size: 10px;
    border-collapse: collapse;
    word-wrap: break-word;
    white-space: normal;
    width: 220px;
    margin: auto;
}
.popuptable td{
    border: 1px solid var(--color-border);
    padding: 0px 5px 0px 5px;
    color: var(--color-main-text)
}
.popuptable tr:nth-child(even) {
    background-color: var(--color-main-background);
}
.popuptable tr:nth-child(odd) {
    background-color: var(--color-background-dark);
}
.popuptable tr:hover {
    background-color: var(--color-background-darker);
}
.trackNamesList {
    word-wrap: break-word;
    white-space: normal;
}
.searchCompleteIcon {
    background-color: inherit;
    border: 0px;
    height: 35px;
    padding-top: 15px;
}
.searchCompleteLink {
    line-height: 35px;
}
.searchCompleteIcon i {
    min-height: 0px;
    height: 10px;
    line-height: 0.2;
    display: block;
    width: 1px;
    margin-left: -5px;
}
.search-place-contact,
.search-add-favorite {
    margin-left: auto;
    margin-right: auto;
    display: block;
}
.search-result-popup {
    width: 250px;
}
.search-result-popup .leaflet-popup-content {
    line-height: 25px !important;
}
.ui-autocomplete {
    z-index: 9999;
}

